# magpie

./: .gitignore  README.md  reproduce_copy.py
examples/minisat/: init.sh
examples/triangle-c/: init_bug.sh  init_size.sh  init_slow.sh
examples/triangle-c/_magpie/: scenario_bug.txt  scenario_slow.txt  triangle_slow.c.xml
examples/triangle-java/: Triangle.java.xml  init_slow.sh
examples/triangle-java/_magpie/: scenario_slow.txt
examples/triangle-py/: triangle.py
examples/triangle-py/_magpie/: scenario_slow.txt
experiments/minisat_hack/: build.sh  create_kfold_splits.sh  init.sh  run.sh  test.sh
experiments/minisat_hack/_magpie/: scenario_runtime_xml_FOLD1_steps100.txt  scenario_runtime_xml_FOLD1_steps1000.txt  scenario_runtime_xml_FOLD1_steps250.txt  scenario_runtime_xml_FOLD1_steps500.txt  scenario_runtime_xml_FOLD1_steps750.txt  scenario_runtime_xml_FOLD2_steps100.txt  scenario_runtime_xml_FOLD2_steps1000.txt  scenario_runtime_xml_FOLD2_steps250.txt  scenario_runtime_xml_FOLD2_steps500.txt  scenario_runtime_xml_FOLD2_steps750.txt  scenario_runtime_xml_FOLD3_steps100.txt  scenario_runtime_xml_FOLD3_steps1000.txt  scenario_runtime_xml_FOLD3_steps250.txt  scenario_runtime_xml_FOLD3_steps500.txt  scenario_runtime_xml_FOLD3_steps750.txt  scenario_runtime_xml_FOLD4_steps100.txt  scenario_runtime_xml_FOLD4_steps1000.txt  scenario_runtime_xml_FOLD4_steps250.txt  scenario_runtime_xml_FOLD4_steps500.txt  scenario_runtime_xml_FOLD4_steps750.txt  scenario_runtime_xml_FOLD5_steps100.txt  scenario_runtime_xml_FOLD5_steps1000.txt  scenario_runtime_xml_FOLD5_steps250.txt  scenario_runtime_xml_FOLD5_steps500.txt  scenario_runtime_xml_FOLD5_steps750.txt  sedawj2tX
experiments/minisat_hack/data/: train1  train5  uf100-01.cnf  uf100-02.cnf  uf150-01.cnf  uf200-01.cnf  uf250-02.cnf  uuf100-01.cnf  uuf150-01.cnf  uuf150-02.cnf  uuf200-01.cnf  uuf200-02.cnf  uuf250-01.cnf  validate2  validate3  validate4
experiments/pngOptim/: compile.sh  create_kfold_splits.sh  init.sh  run.sh  seed.txt  setup.sh  test.sh
experiments/pngOptim/_magpie/: optim.c.xml  optipng.c.xml  scenario_runtime_xml.txt  scenario_runtime_xml_FOLD1.txt  scenario_runtime_xml_FOLD1_steps100.txt  scenario_runtime_xml_FOLD1_steps1000.txt  scenario_runtime_xml_FOLD1_steps250.txt  scenario_runtime_xml_FOLD1_steps500.txt  scenario_runtime_xml_FOLD1_steps750.txt  scenario_runtime_xml_FOLD2_steps100.txt  scenario_runtime_xml_FOLD2_steps1000.txt  scenario_runtime_xml_FOLD2_steps250.txt  scenario_runtime_xml_FOLD2_steps500.txt  scenario_runtime_xml_FOLD2_steps750.txt  scenario_runtime_xml_FOLD3_steps100.txt  scenario_runtime_xml_FOLD3_steps1000.txt  scenario_runtime_xml_FOLD3_steps250.txt  scenario_runtime_xml_FOLD3_steps500.txt  scenario_runtime_xml_FOLD3_steps750.txt  scenario_runtime_xml_FOLD4_steps100.txt  scenario_runtime_xml_FOLD4_steps1000.txt  scenario_runtime_xml_FOLD4_steps250.txt  scenario_runtime_xml_FOLD4_steps500.txt  scenario_runtime_xml_FOLD4_steps750.txt  scenario_runtime_xml_FOLD5_steps100.txt  scenario_runtime_xml_FOLD5_steps1000.txt  scenario_runtime_xml_FOLD5_steps250.txt  scenario_runtime_xml_FOLD5_steps500.txt  scenario_runtime_xml_FOLD5_steps750.txt
experiments/pngOptim/data/: README.txt  train1  train2  train3  train4  train5  validate1  validate2  validate3  validate4  validate5
experiments/pngOptim/optipng-7.9.1/: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  configure
experiments/pngOptim/optipng-7.9.1/doc/: history.txt  optipng.man1.html  optipng.man1.txt
experiments/pngOptim/optipng-7.9.1/src/opngreduc/: Makefile.in  opngreduc.c  opngreduc.h
experiments/pngOptim/optipng-7.9.1/src/optipng/: Makefile.in  optipng.c  proginfo.h  ratio.c  ratio.h
experiments/pngOptim/optipng-7.9.1/src/optipng/man/: Makefile.in  optipng.1  optipng.1.adoc
experiments/pngOptim/optipng-7.9.1/src/optipng/testprog/: ratio_test.c
experiments/pngOptim/optipng-7.9.1/src/pngxtern/: Makefile.in  pngxrbmp.c
experiments/results_INTED2025/: analyse.ipynb  results.csv
experiments/results_INTED2026/: analyse.ipynb  results.csv
experiments/sat4j/: create_kfold_splits.sh  init.sh  run.sh  run_custom.sh  run_fixed.sh  test.cnf  test.params  test.sh  uf50-01.cnf
experiments/sat4j/_magpie/: Solver.java.xml  scenario_runtime_xml_FOLD1.txt  scenario_runtime_xml_FOLD1_steps100.txt  scenario_runtime_xml_FOLD1_steps1000.txt  scenario_runtime_xml_FOLD1_steps250.txt  scenario_runtime_xml_FOLD1_steps500.txt  scenario_runtime_xml_FOLD1_steps750.txt  scenario_runtime_xml_FOLD2_steps100.txt  scenario_runtime_xml_FOLD2_steps1000.txt  scenario_runtime_xml_FOLD2_steps250.txt  scenario_runtime_xml_FOLD2_steps500.txt  scenario_runtime_xml_FOLD2_steps750.txt  scenario_runtime_xml_FOLD3_steps100.txt  scenario_runtime_xml_FOLD3_steps1000.txt  scenario_runtime_xml_FOLD3_steps250.txt  scenario_runtime_xml_FOLD3_steps500.txt  scenario_runtime_xml_FOLD3_steps750.txt  scenario_runtime_xml_FOLD4_steps100.txt  scenario_runtime_xml_FOLD4_steps1000.txt  scenario_runtime_xml_FOLD4_steps250.txt  scenario_runtime_xml_FOLD4_steps500.txt  scenario_runtime_xml_FOLD4_steps750.txt  scenario_runtime_xml_FOLD5_steps100.txt  scenario_runtime_xml_FOLD5_steps1000.txt  scenario_runtime_xml_FOLD5_steps250.txt  scenario_runtime_xml_FOLD5_steps500.txt  (+2 more)
experiments/weka/: RandomForest.java.xml  compile.sh  create_kfold_splits.sh  init.sh  run.sh  test.sh
magpie/: settings.py
magpie/algos/: __init__.py  genetic_programming.py  local_search.py  umda_algorithm.py
magpie/core/: abstract_software.py  basic_algorithm.py  basic_protocol.py  scenario.py  setup.py
magpie/utils/: convert.py
tests/: run_experiments.slurm
(+71 files in other folders)
